--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,10 +1,10 @@
 apiVersion: skaffold/v2beta17
 kind: Config
 metadata:
-  name: flask-uwsgi-docker
+  name: flask_uwsgi_docker
 build:
   artifacts:
-  - image: darthfork/flask-uwsgi-docker
+  - image: darthfork/flask_uwsgi_docker
     docker:
       dockerfile: Dockerfile
 deploy:
