--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -28,3 +28,9 @@ spec:
         image: darthfork/flask_uwsgi_docker
         ports:
         - containerPort: 5000
+        livenessProbe:
+          httpGet:
+            path: /healthcheck
+            port: 5000
+          failureThreshold: 1
+          periodSeconds: 30
