--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -1,31 +1,21 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: flask-uwsgi-docker
-spec:
-  ports:
-  - port: 5000
-    targetPort: 5000
-  type: LoadBalancer
-  selector:
-    app: flask-uwsgi-docker
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flask-uwsgi-docker
+  name: {{ .Chart.Name }}
+  labels:
+    app: {{ .Chart.Name }}
 spec:
   selector:
     matchLabels:
-      app: flask-uwsgi-docker
+      app: {{ .Chart.Name }}
   template:
     metadata:
       labels:
-        app: flask-uwsgi-docker
+        app: {{ .Chart.Name }}
     spec:
       containers:
-      - name: flask-uwsgi-docker
-        image: darthfork/flask_uwsgi_docker
+      - name: {{ .Chart.Name }}
+        image: {{ .Values.image }}
         ports:
         - containerPort: 5000
         livenessProbe:
