--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 http=0.0.0.0:5000
-socket=/tmp/flask_uwsgi_docker.socket
-module=flask_uwsgi_docker.app:app
+socket=/tmp/pythonmstpl.socket
+module=pythonmstpl.app:app
 callable=app
 uid=1000
 enable-threads=true
