--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -1,4 +1,4 @@
-# Default values for flask-uwsgi-docker
+# Default values for pythonmstpl
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 replicaCount: 1
