--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -2,11 +2,11 @@ apiVersion: skaffold/v2beta17
 kind: Config
 build:
   artifacts:
-  - image: flask-uwsgi-docker
+  - image: pythonmstpl
 deploy:
   helm:
     releases:
-    - name: flask-uwsgi-docker
+    - name: pythonmstpl
       chartPath: charts
       artifactOverrides:
-        image: flask-uwsgi-docker
+        image: pythonmstpl
