--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -1,4 +1,15 @@
 # Default values for pythonmstpl
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-replicaCount: 1
+resources:
+  replicaCount: 1
+  resourcesLimits:
+    memory: 128Mi
+    cpu: 0.5
+  resourcesRequests:
+    memory: 64Mi
+    cpu: 0.25
+
+configMap:
+  data:
+    ENVIRONMENT: "dev"
