feat: Add versioned APIs
Signed-off-by: Abhishek Rai <rai.abhishek90@gmail.com>

--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         - containerPort: 5000
         livenessProbe:
           httpGet:
-            path: /healthcheck
+            path: /v1/healthcheck
             port: 5000
           failureThreshold: 1
           periodSeconds: 30
