refactor: rename charts dir to helm
Signed-off-by: Abhishek Rai <rai.abhishek90@gmail.com>

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,6 +7,6 @@ deploy:
   helm:
     releases:
     - name: pythonmstpl
-      chartPath: charts
+      chartPath: helm
       artifactOverrides:
         image: pythonmstpl
