ci: add tag as a commandline argument to earthly
Signed-off-by: Abhishek Rai <rai.abhishek90@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,4 @@ jobs:
           version: "latest"
 
       - name: Build Container
-        run: earthly +container
+        run: earthly --build-arg TAG=$(make get-version) +container
