upgrade to alpine 3.16
Signed-off-by: Abhishek Rai <rai.abhishek90@gmail.com>

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: {{ .Chart.Name }}
-        image: {{ .Values.image }}
+        image: {{ .Values.image.repo }}:{{ .Values.image.tag }}
         ports:
         - containerPort: 5000
         livenessProbe:
