--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,6 +1,6 @@
-# Default values for pythonmstpl
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+image:
+  repo: pythonmstpl
+  tag: 1.0.0
 resources:
   replicaCount: 1
   resourcesLimits:
