--- a/helm/templates/configmap.yml
+++ b/helm/templates/configmap.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Chart.Name }}-config
+  name: {{ .Values.name }}-config
   labels:
-    app: {{ .Chart.Name }}
+    app: {{ .Values.name }}
 data:
 {{ .Values.configMap.data | toYaml | indent 2 }}
