--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ .Values.name }}
 spec:
   ports:
   - port: 5000
     targetPort: 5000
   type: LoadBalancer
   selector:
-    app: {{ .Chart.Name }}
+    app: {{ .Values.name }}
