chore: lint files
Signed-off-by: Abhishek Rai <rai.abhishek90@gmail.com>

--- a/helm/templates/configmap.yml
+++ b/helm/templates/configmap.yml
@@ -5,4 +5,4 @@ metadata:
   labels:
     app: {{ .Values.name }}
 data:
-{{ .Values.configMap.data | toYaml | indent 2 }}
+    ENVIRONMENT: {{ .Values.config.environment }}
