--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -10,6 +10,5 @@ resources:
   resourcesRequests:
     memory: 512Mi
     cpu: 1
-configMap:
-  data:
-    ENVIRONMENT: "dev"
+config:
+  environment: "dev"
