--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run tests with pytest
+        run: pytest
+
       - name: Hadolint
         uses: hadolint/hadolint-action@v1.5.0
         with:
@@ -25,24 +38,3 @@ jobs:
 
       - name: Build Image
         run: make build
-
-  earthly:
-    name: earthly-build
-    runs-on: ubuntu-20.04
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - uses: earthly/actions-setup@v1
-        with:
-          version: "latest"
-
-      - name: Run tests
-        run: earthly +test
-
-      - name: Build Python Package
-        run: earthly +build
-
-      - name: Build Container
-        run: earthly --build-arg TAG=$(make get-version) +container
