--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,13 +23,8 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
       - name: Run tests with pytest
-        run: pytest
+        run: make local-test
 
       - name: Hadolint
         uses: hadolint/hadolint-action@v1.5.0
