fix linter config
Signed-off-by: Abhishek Rai <rai.abhishek90@gmail.com>

--- a/conf/pylint.conf
+++ b/conf/pylint.conf
@@ -10,4 +10,5 @@ disable=raw-checker-failed,
         suppressed-message,
         useless-suppression,
         deprecated-pragma,
+        missing-final-newline,
         use-symbolic-message-instead
